--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-pyyaml==6.0.1
-pandas==2.2.0
-numpy==1.26.3
-plotly==5.18.0
-matplotlib==3.8.2 
+streamlit==1.31.0
+pandas==2.1.3
+openai==1.12.0
+python-dotenv==1.0.0
+Pillow==10.1.0
+pyyaml==6.0.1 
