Update configuration for Streamlit Cloud compatibility: Set Python 3.11 and downgrade dependencies

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -8,6 +8,10 @@ font="sans serif"
 [server]
 enableCORS = true
 enableXsrfProtection = true
+runOnSave = true
 
 [browser]
-gatherUsageStats = false 
+gatherUsageStats = false
+
+[runner]
+pythonVersion = "3.11" 
